# ohos_jscore

./: .gitignore  README.md  build-profile.json5  deploy.sh
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/rawfile/: script1.js  script2.js
entry/src/main/resources/zh_CN/element/: string.json
jscore/: BuildProfile.ets  CHANGELOG.md  Index.ets  README.md  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
jscore/example/: Index.ets  usage.md
jscore/src/main/: module.json5
jscore/src/main/cpp/: CMakeLists.txt  JSVMException.cpp  JSVMException.h  common.h  jsvm_utils.cpp  jsvm_utils.h  napi_init.cpp  napi_utils.h
jscore/src/main/cpp/types/libjscore/: Index.d.ts  oh-package.json5
jscore/src/main/ets/: JSCore.ets
jscore/src/main/resources/base/element/: string.json
jscore/src/main/resources/zh_CN/element/: string.json
jscore/src/mock/: mock-config.json5
jscore/src/ohosTest/: module.json5
